--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: Siddharth Academic Projects
+description: Below is the list of the Academic projects that I did during the tenure of my MS in Business Analytics & Information Systesms
