--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-dinky
-title: Siddharth Academic Projects
-description: Below is the list of the Academic projects that I did during the tenure of my MS in Business Analytics & Information Systesms
+title: Siddharth Resume
+description: 
+● I have completed my MS from University Of South Florida in Business Analytics & Information Systems with an Academic Honors Degree 
+● I have an overall work experience of 3 years.
+● My interests- Business Intelligence, Data Analysis, Data Visualization
