--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-dinky
 title: Siddharth Resume
 description: I have completed my MS from University Of South Florida in Business Analytics & Information Systems with an Academic Honors Degree. I have an overall work experience of 3 years. My interests- Business Intelligence, Data Analysis, Data Visualization
+![display pic](https://github.com/sidster1/sidster1.github.io/blob/master/dp.png)
